--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-chat",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5001",
   "dependencies": {
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
@@ -20,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
